--- a/dapi/spec/fixtures/campaigns.yml
+++ b/dapi/spec/fixtures/campaigns.yml
@@ -11,10 +11,10 @@ success_confirm:
   opening_at: 2000-1-1 0:0:0
   closing_at: 2100-1-1 0:0:0
   movie: /video/yomeishu.mov
-  thumbnail: /images/poster-to.jpg
+  thumbnail: /images/poster-pc.jpg
   message: キャンペーン1メッセージ
   conversion_tag: cnvtag1
-  second_picture: /images/poster-to.jpg
+  second_picture: /images/poster-pc.jpg
   banner_title: banner1
   second_point: 10
   client_url: http://client.com
@@ -38,10 +38,10 @@ first_page_null:
   opening_at: 2000-1-1 0:0:0
   closing_at: 2100-1-1 0:0:0
   movie: /video/yomeishu.mov
-  thumbnail: /images/poster-to.jpg
+  thumbnail: /images/poster-pc.jpg
   message: キャンペーンメッセージ
   conversion_tag: cnvtag1
-  second_picture: /images/poster-to.jpg
+  second_picture: /images/poster-pc.jpg
   banner_title: banner1
   second_point: 10
   client_url: http://client.com
@@ -56,10 +56,10 @@ camp_status0:
   opening_at: 2100-1-1 0:0:0
   closing_at: 2100-1-1 0:0:0
   movie: /video/yomeishu.mov
-  thumbnail: /images/poster-to.jpg
+  thumbnail: /images/poster-pc.jpg
   message: キャンペーン2メッセージ
   conversion_tag: cnvtag2
-  second_picture: /images/poster-to.jpg
+  second_picture: /images/poster-pc.jpg
   banner_title: banner2
   second_point: 20
   client_url: http://client.com
@@ -75,10 +75,10 @@ camp_status9:
   opening_at: 2000-1-1 0:0:0
   closing_at: 2100-1-1 0:0:0
   movie: /video/yomeishu.mov
-  thumbnail: /images/poster-to.jpg
+  thumbnail: /images/poster-pc.jpg
   message: キャンペーン3メッセージ
   conversion_tag: cnvtag3
-  second_picture: /images/poster-to.jpg
+  second_picture: /images/poster-pc.jpg
   banner_title: banner3
   second_point: 30
   client_url: http://client.com
@@ -93,10 +93,10 @@ camp_closed:
   opening_at: 2000-1-1 0:0:0
   closing_at: 2012-1-1 0:0:0
   movie: /video/yomeishu.mov
-  thumbnail: /images/poster-to.jpg
+  thumbnail: /images/poster-pc.jpg
   message: キャンペーン4メッセージ
   conversion_tag: cnvtag4
-  second_picture: /images/poster-to.jpg
+  second_picture: /images/poster-pc.jpg
   banner_title: banner4
   second_point: 40
   client_url: http://client.com
@@ -111,10 +111,10 @@ incons_question:
   opening_at: 2000-1-1 0:0:0
   closing_at: 2012-1-1 0:0:0
   movie: /video/yomeishu.mov
-  thumbnail: /images/poster-to.jpg
+  thumbnail: /images/poster-pc.jpg
   message: キャンペーン4メッセージ
   conversion_tag: cnvtag4
-  second_picture: /images/poster-to.jpg
+  second_picture: /images/poster-pc.jpg
   banner_title: banner4
   second_point: 40
   client_url: http://client.com
