--- a/dapi/spec/fixtures/campaigns.yml
+++ b/dapi/spec/fixtures/campaigns.yml
@@ -14,7 +14,7 @@ success_confirm:
   thumbnail: /images/poster-pc.jpg
   message: キャンペーン1メッセージ
   conversion_tag: cnvtag1
-  second_picture: /images/poster-pc.jpg
+  second_picture: /images/creative-sp.jpg
   banner_title: banner1
   second_point: 10
   client_url: http://client.com
@@ -41,7 +41,7 @@ first_page_null:
   thumbnail: /images/poster-pc.jpg
   message: キャンペーンメッセージ
   conversion_tag: cnvtag1
-  second_picture: /images/poster-pc.jpg
+  second_picture: /images/creative-sp.jpg
   banner_title: banner1
   second_point: 10
   client_url: http://client.com
@@ -59,7 +59,7 @@ camp_status0:
   thumbnail: /images/poster-pc.jpg
   message: キャンペーン2メッセージ
   conversion_tag: cnvtag2
-  second_picture: /images/poster-pc.jpg
+  second_picture: /images/creative-sp.jpg
   banner_title: banner2
   second_point: 20
   client_url: http://client.com
@@ -78,7 +78,7 @@ camp_status9:
   thumbnail: /images/poster-pc.jpg
   message: キャンペーン3メッセージ
   conversion_tag: cnvtag3
-  second_picture: /images/poster-pc.jpg
+  second_picture: /images/creative-sp.jpg
   banner_title: banner3
   second_point: 30
   client_url: http://client.com
@@ -96,7 +96,7 @@ camp_closed:
   thumbnail: /images/poster-pc.jpg
   message: キャンペーン4メッセージ
   conversion_tag: cnvtag4
-  second_picture: /images/poster-pc.jpg
+  second_picture: /images/creative-sp.jpg
   banner_title: banner4
   second_point: 40
   client_url: http://client.com
@@ -114,7 +114,7 @@ incons_question:
   thumbnail: /images/poster-pc.jpg
   message: キャンペーン4メッセージ
   conversion_tag: cnvtag4
-  second_picture: /images/poster-pc.jpg
+  second_picture: /images/creative-sp.jpg
   banner_title: banner4
   second_point: 40
   client_url: http://client.com
