--- a/dapi/Gemfile
+++ b/dapi/Gemfile
@@ -9,6 +9,12 @@ gem 'mysql2'
 
 gem 'uuidtools'
 
+group :development do
+  gem 'capistrano'
+  gem 'capistrano-ext'
+  gem 'capistrano_colors'
+end
+
 group :development, :test do
   gem "rspec-rails", ">= 2.0.0"
   gem "cucumber-rails", ">= 0.3.2"
