--- a/dapi/test/fixtures/campaigns.yml
+++ b/dapi/test/fixtures/campaigns.yml
@@ -10,7 +10,7 @@ success_confirm:
   point: 10
   opening_at: 2000-1-1 0:0:0
   closing_at: 2100-1-1 0:0:0
-  movie: /images/media/yomeishu.mov
+  movie: /images/media/yomeishu.mp4
   thumbnail: /images/poster-pc.jpg
   message: キャンペーン1メッセージ
   conversion_tag: /images/conversion_tag.html
@@ -27,7 +27,7 @@ success_confirm_first:
   point: 10
   opening_at: 2000-1-1 0:0:0
   closing_at: 2100-1-1 0:0:0
-  movie: /images/media/yomeishu.mov
+  movie: /images/media/yomeishu.mp4
   thumbnail: /images/poster-pc.jpg
   message: キャンペーン1メッセージ
   conversion_tag: /images/conversion_tag.html
@@ -74,7 +74,7 @@ null_answer:
   point: 10
   opening_at: 2000-1-1 0:0:0
   closing_at: 2100-1-1 0:0:0
-  movie: /images/media/yomeishu.mov
+  movie: /images/media/yomeishu.mp4
   thumbnail: /images/poster-pc.jpg
   message: キャンペーン1メッセージ
   conversion_tag: cnvtag1
@@ -93,7 +93,7 @@ first_page_null:
   point: 10
   opening_at: 2000-1-1 0:0:0
   closing_at: 2100-1-1 0:0:0
-  movie: /images/media/yomeishu.mov
+  movie: /images/media/yomeishu.mp4
   thumbnail: /images/poster-pc.jpg
   message: キャンペーンメッセージ
   conversion_tag: cnvtag1
@@ -110,7 +110,7 @@ first_page_id_null:
   point: 10
   opening_at: 2000-1-1 0:0:0
   closing_at: 2100-1-1 0:0:0
-  movie: /images/media/yomeishu.mov
+  movie: /images/media/yomeishu.mp4
   thumbnail: /images/poster-pc.jpg
   message: キャンペーンメッセージ
   conversion_tag: cnvtag1
@@ -128,7 +128,7 @@ camp_status0:
   point: 20
   opening_at: 2100-1-1 0:0:0
   closing_at: 2100-1-1 0:0:0
-  movie: /images/media/yomeishu.mov
+  movie: /images/media/yomeishu.mp4
   thumbnail: /images/poster-pc.jpg
   message: キャンペーン2メッセージ
   conversion_tag: cnvtag2
@@ -147,7 +147,7 @@ camp_status9:
   point: 30
   opening_at: 2000-1-1 0:0:0
   closing_at: 2100-1-1 0:0:0
-  movie: /images/media/yomeishu.mov
+  movie: /images/media/yomeishu.mp4
   thumbnail: /images/poster-pc.jpg
   message: キャンペーン3メッセージ
   conversion_tag: cnvtag3
@@ -165,7 +165,7 @@ camp_closed:
   point: 40
   opening_at: 2000-1-1 0:0:0
   closing_at: 2012-1-1 0:0:0
-  movie: /images/media/yomeishu.mov
+  movie: /images/media/yomeishu.mp4
   thumbnail: /images/poster-pc.jpg
   message: キャンペーン4メッセージ
   conversion_tag: cnvtag4
@@ -183,7 +183,7 @@ incons_question:
   point: 40
   opening_at: 2000-1-1 0:0:0
   closing_at: 2012-1-1 0:0:0
-  movie: /images/media/yomeishu.mov
+  movie: /images/media/yomeishu.mp4
   thumbnail: /images/poster-pc.jpg
   message: キャンペーン4メッセージ
   conversion_tag: cnvtag4
@@ -202,7 +202,7 @@ yomei_shu:
   point: 13
   opening_at: 
   closing_at: 
-  movie: /images/media/yomeishu.mov
+  movie: /images/media/yomeishu.mp4
   thumbnail: /images/poster-sp.jpg
   message: 
   conversion_tag: /images/conversion_tag.html
