--- a/dapi/spec/fixtures/campaigns.yml
+++ b/dapi/spec/fixtures/campaigns.yml
@@ -15,7 +15,7 @@ success_confirm:
   message: キャンペーン1メッセージ
   conversion_tag: <img src="../../images/conversion.jpg alt="サンプル">
   second_picture: /images/creative-sp.jpg
-  banner_title: banner1
+  banner_title: 
   second_point: 10
   client_url: http://cdn.poncan.jp
 
